# gedit-externaltools-plugin

./: README.md  gedit-externaltools-plugin.doap  meson.build  meson_options.txt
build-aux/meson/: post_install.py
help/: meson.build
help/C/: gedit-plugins-external-tools.page  gedit-plugins-install.page  gedit-plugins-snippets.page  gedit-plugins-text-size.page
help/hu/: hu.po
help/ru/: ru.po
help/sv/: sv.po
help/uk/: uk.po
plugins/: meson.build
plugins/externaltools/: externaltools.plugin.desktop.in  meson.build
plugins/externaltools/data/: meson.build
plugins/externaltools/scripts/: meson.build
plugins/externaltools/tests/: meson.build
plugins/externaltools/tools/: functions.py  meson.build  outputpanel.py  windowactivatable.py
po/: LINGUAS  POTFILES.in  cs.po  da.po  de.po  eu.po  id.po  ka.po  pl.po  pt_BR.po
